# zig-in-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  zig-toolchain.cmake
